--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,7 +1,7 @@
 # This is the resource bundle for Master details App
 
 #XTIT: Application name
-appTitle=Master details App
+appTitle=Master details App Hello
 
 #YDES: Application description
 appDescription=Test
